Adding endpoint to send unstructured payloads to.
